# TP-Homework

./: CMakeLists.txt  Main.cpp  Main.h  NoTest.cpp  README.md  Start  Test.cpp  backup_script
B/: CMakeLists.txt  lib.h
C/: main.cpp  main.h
